--- a/index.html
+++ b/index.html
@@ -4,16 +4,28 @@
     <link href="https://vjs.zencdn.net/8.5.2/video-js.css" rel="stylesheet" />
     <script src="https://vjs.zencdn.net/8.5.2/video.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/videojs-overlay@3.1.0/dist/videojs-overlay.min.js"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
     <!-- If you'd like to support IE8 (for Video.js versions prior to v7) -->
     <!-- <script src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script> -->
     <link rel="stylesheet" type="text/css" href="static/css/index.css" />
   </head>
 
   <body>
-    <video id="myVideo" class="video-js vjs-default-skin"></video>
-    <div id="ad" style="position: fixed; z-index: 2; top: 10px; left: 20px">영상 속 여자가 입은 자켓이 궁금하다면?</div>
-    <div>
-      <div id="time">현재 시간 : 0</div>
+    <div id="header"></div>
+    <div class="container">
+      <div class="row justify-content-center align-items-center">
+        <video id="myVideo" class="video-js vjs-default-skin"></video>
+      </div>
     </div>
   </body>
 
