--- a/index.html
+++ b/index.html
@@ -23,11 +23,20 @@
   <body>
     <div id="header"></div>
     <div class="container">
+      <button onclick="toggleAd()">Toggle Ad</button>
       <div class="row justify-content-center align-items-center">
-        <video id="myVideo" class="video-js vjs-default-skin"></video>
+        <div id="videoDiv" class="col-md-10">
+          <div class="d-flex justify-content-center">
+            <video id="myVideo" class="video-js vjs-default-skin"></video>
+          </div>
+        </div>
+        <div id="ad" class="col-md-2" style="color: white">
+          <button onclick="toggleAd()">X</button>
+          <div id="adText"></div>
+          <div id="adUrl"></div>
+        </div>
       </div>
     </div>
   </body>
-
   <script src="static/js/index.js"></script>
 </html>
