feat: navbar 생성

--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
   </head>
 
   <body onselectstart="return false" ondragstart="return false">
-    <div id="header"></div>
+    <div id="header">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <image src="./static/img/mbc-logo.png"></image>
+          </a>
+        </div>
+      </nav>
+    </div>
     <div class="container">
       <div class="row justify-content-center align-items-center">
         <div id="videoDiv" class="col-md-12">
