--- a/index.html
+++ b/index.html
@@ -21,107 +21,120 @@
   </head>
 
   <body onselectstart="return false" ondragstart="return false">
-    <div id="header">
-      <nav class="navbar navbar-expand-lg">
-        <div class="container">
-          <a class="navbar-brand" href="#">
-            <image src="./static/img/mbc-logo.png"></image>
-          </a>
-          <div class="collapse navbar-collapse" id="leftNavBar">
-            <ul class="navbar-nav">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle left-nav" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">TV </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">드라마</a></li>
-                  <li><a class="dropdown-item" href="#">예능</a></li>
-                  <li><a class="dropdown-item" href="#">시사교양</a></li>
-                  <li><a class="dropdown-item" href="#">스포츠</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <div class="nav-link left-nav">라디오</div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link left-nav" href="#">뉴스</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link left-nav" href="#">연예</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link left-nav" href="#">라이프</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link left-nav" href="#">영화</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link left-nav" href="#">지금무료</a>
-              </li>
-            </ul>
-            <a class="navbar-brand" id="searchImage" href="#">
-              <image src="./static/img/lnb-search.png"></image>
+    <div id="wrap">
+      <div id="header">
+        <nav class="navbar navbar-expand-lg">
+          <div class="container">
+            <a class="navbar-brand" href="#">
+              <image src="./static/img/mbc-logo.png"></image>
             </a>
+            <div class="collapse navbar-collapse" id="leftNavBar">
+              <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle left-nav" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">TV </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">드라마</a></li>
+                    <li><a class="dropdown-item" href="#">예능</a></li>
+                    <li><a class="dropdown-item" href="#">시사교양</a></li>
+                    <li><a class="dropdown-item" href="#">스포츠</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <div class="nav-link left-nav">라디오</div>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link left-nav" href="#">뉴스</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link left-nav" href="#">연예</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link left-nav" href="#">라이프</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link left-nav" href="#">영화</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link left-nav" href="#">지금무료</a>
+                </li>
+              </ul>
+              <a class="navbar-brand" id="searchImage" href="#">
+                <image src="./static/img/lnb-search.png"></image>
+              </a>
+            </div>
+            <div id="rightNavBar">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link right-nav" href="#">로그인</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link right-nav" href="#">이용권</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link right-nav" href="#">이벤트</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link right-nav" href="#">보도자료</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link right-nav" href="#">장애인서비스</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link right-nav right-nav-border" href="#">온에어</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link right-nav right-nav-border">
+                    <image src="./static/img/nav_mbic.png"></image>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link right-nav right-nav-border" href="#">편성표</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link right-nav right-nav-border" href="#">클립</a>
+                </li>
+              </ul>
+            </div>
           </div>
-          <div id="rightNavBar">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link right-nav" href="#">로그인</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link right-nav" href="#">이용권</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link right-nav" href="#">이벤트</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link right-nav" href="#">보도자료</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link right-nav" href="#">장애인서비스</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link right-nav right-nav-border" href="#">온에어</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link right-nav right-nav-border">
-                  <image src="./static/img/nav_mbic.png"></image>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link right-nav right-nav-border" href="#">편성표</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link right-nav right-nav-border" href="#">클립</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </div>
-    <div class="container">
-      <div id="player" class="row justify-content-center align-items-center">
-        <div id="videoContainer" class="col-md-12">
-          <div class="d-flex justify-content-center">
-            <video id="myVideo" class="video-js vjs-default-skin"></video>
-          </div>
-        </div>
-        <div id="ad" class="col-md-2 hidden">
-          <div id="toggleDiv" class="d-flex flex-column justify-content-center align-items-end">
-            <a id="toggleBtn" onclick="toggleAd()"></a>
-          </div>
-          <div id="toggleAd">
-            <div id="nowAd"></div>
-            <div id="adList"></div>
-          </div>
-        </div>
+        </nav>
       </div>
-      <div id="vodInfo">
-        <div id="vodInfo-header">
-          <span id="ch-title">나 혼자 산다</span>
-          <a id="ch-home" href="https://program.imbc.com/singlelife">홈페이지</a>
-          <a id="ch-vod" href="https://playvod.imbc.com/templete/VodList?bid=1002831100000100000">다시보기</a>
+      <div class="container">
+        <div id="player" class="row justify-content-center align-items-center">
+          <div id="videoContainer" class="col-md-12">
+            <div class="d-flex justify-content-center">
+              <video id="myVideo" class="video-js vjs-default-skin"></video>
+            </div>
+          </div>
+          <div id="ad" class="col-md-2 hidden">
+            <div id="toggleDiv" class="d-flex flex-column justify-content-center align-items-end">
+              <a id="toggleBtn" onclick="toggleAd()"></a>
+            </div>
+            <div id="toggleAd">
+              <div id="nowAd"></div>
+              <div id="adList"></div>
+            </div>
+          </div>
         </div>
-        <div>
-          <div id="">[511회] 나 혼자 산다 자취 감췄던 전현무의 무카 세차날🚘무첨지의 운수 좋은 날 & 먹기 위해 사는 남자 이장우..🚫물 단식 디톡스 시작</div>
+        <div id="vodInfo">
+          <div id="vodInfo-header">
+            <span id="ch-title">나 혼자 산다</span>
+            <a id="ch-home" href="https://program.imbc.com/singlelife">홈페이지</a>
+            <a id="ch-vod" href="https://playvod.imbc.com/templete/VodList?bid=1002831100000100000">다시보기</a>
+          </div>
+          <div id="vodInfo-Info">
+            <h1 id="vodTitle">
+              [511회] 나 혼자 산다 511회 예고편
+              <span id="vodTime">10:37~12:04</span>
+            </h1>
+            <div id="vodInfo-social">
+              <div id="liveTalk">
+                <button type="button" id="liveTalkButton">라이브톡</button>
+              </div>
+              <div id="shareSNS">
+                <button type="button" id="shareSNSButton">공유하기</button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
