feat: 광고 장면 수정

--- a/index.html
+++ b/index.html
@@ -106,10 +106,12 @@
             </div>
           </div>
           <div id="ad" class="col-md-2 hidden">
-            <div id="toggleDiv" class="d-flex flex-column justify-content-center align-items-end">
+            <div id="toggleDiv">
+              <div id="adTitle">TAGINFO</div>
               <a id="toggleBtn" onclick="toggleAd()"></a>
             </div>
             <div id="toggleAd">
+              <div id="adTitle-sub">이 장면의 음식/쇼핑/장소 정보는?</div>
               <div id="nowAd"></div>
               <div id="adList"></div>
             </div>
